overlays/dev/patches/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tianluai-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          image: tianluai/tianluai-web:develop
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
