overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tianluai-ingress
spec:
  rules:
    - host: ai-dev.tianlu.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tianluai-web
                port:
                  number: 80
    - host: ai-api-dev.tianlu.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tianluai-api
                port:
                  number: 80
